Fixed invisible placeholder

--- a/ui/src/styles/_angular-material2.scss
+++ b/ui/src/styles/_angular-material2.scss
@@ -9,6 +9,7 @@
   max-height: 80vh !important;
 }
 
-.mat-input-element::placeholder {
+input.mat-input-element::placeholder,
+textarea.mat-input-element::placeholder{
   color: $secondaryTextColor !important;
 }
